--- a/resources/assets/less/layout.less
+++ b/resources/assets/less/layout.less
@@ -76,7 +76,7 @@ body.admin-interface::before {
   .sidebar {
     z-index: 1;
     position: absolute;
-    margin-top: 51px;
+    margin-top: @topbar-height;
   }
 }
 
