--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -25,7 +25,8 @@
 @maxWidth:1398px; // 1400-2px to fix chrome bug
 @sidebar-width: 259px;
 @sidebar-reduced-width: 192px;
-@topbar-height: 51px;
+@topbar-height: 50px;
+@menu-item-height: 30px;
 @footer-height: 41px;
 @footer-margin: 30px;
 @admin-bar-width: 112px;
