--- a/resources/assets/less/widgets/buttons.less
+++ b/resources/assets/less/widgets/buttons.less
@@ -19,7 +19,7 @@
   padding-right: 28px;
 }
 
-.btn i {
+.btn.with-icon i {
   position: absolute;
   left: 10px;
   top: 9px;
@@ -31,9 +31,16 @@
 }
 
 .input-group-btn .btn {
-  min-height: 34px;
-  padding-right: 5px;
-  i { color: #777 }
+  //min-height: 34px;
+  //padding-right: 5px;
+  i {
+    color: #777;
+    margin-right: 10px;
+  }
+  .caret {
+    margin-left: 6px;
+    margin-right: -3px;
+  }
 }
 
 .adminGridNavButton {
